Add complete todos functions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 	<div id="msg"></div> 
 	<div id="todos" class="todos"></div>
-	
+	<div id="complete-todos" class="complete-todos"></div>
+
 	<div class="footer">
 
 		<input type="text" id="todo" class="input-form">
