add complete list

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 	<div id="msg"></div> 
 	<div id="todos" class="todos"></div>
+	<div id="msg2"></div> 
 	<div id="complete-todos" class="complete-todos"></div>
 
 	<div class="footer">
